# zip_url

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 7de82337731a_add_email_confirmation.py  c3286829b7dd_users_table.py  c7aee57cfa38_add_zip_url.py  f8ea9532e6b7_add_sessions_table.py
src/: logger.py  main.py
src/auth/: dependencies.py  router.py  service.py
src/celery_app/: celery_main.py  celery_send_email.py
src/core/: config.py  database.py
src/session/: models.py  repository.py  router.py  schemas.py  service.py
src/user/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/zip_url/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
