[project]
name = "zip-url"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
[dependency-groups]
dev = [
  "pytest>=8.0",
  "httpx",
  "pytest-asyncio",
  "ruff",
]
[tool.pytest.ini_options]
pythonpath = ["."]
